<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="54dp"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <Button
            android:text="@string/button_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="209dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button"/>
    <Button
            android:text="@string/button_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" tools:layout_editor_absoluteY="284dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button2"/>
</android.support.constraint.ConstraintLayout>