<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <Button
            android:text="@string/button_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_message" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/button_sm"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/button_phone"/>
    <Button
            android:text="@string/button_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button_phone" app:layout_constraintTop_toBottomOf="@+id/button_message"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/button_problem"/>
    <Button
            android:text="@string/button_problem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button_problem" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_phone" app:layout_constraintHorizontal_bias="0.5"/>
    <Button
            android:text="@string/button_sm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/button_sm" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/button_message"/>
</android.support.constraint.ConstraintLayout>