<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/text_phone_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView7" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/textView8"/>
    <TextView
            android:text="@string/text_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView8" tools:text="@tools:sample/date/mmddyy" android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/text_phone_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView9" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8" tools:text="@tools:sample/lorem"/>
    <TextView
            android:text="@string/text_phone_data_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView10" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" tools:text="@tools:sample/lorem"/>
    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="64dp"/>
</android.support.constraint.ConstraintLayout>