<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <Button
            android:text="@string/button_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/create_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password2"
            android:hint="@string/prompt_password"
            android:autofillHints="" tools:targetApi="o"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/email2"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textWebEmailAddress"
            android:ems="10"
            android:id="@+id/email2"
            android:hint="@string/prompt_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="140dp"
            android:autofillHints="" tools:targetApi="o"/>
    <TextView
            android:text="@string/password_key"
            android:layout_width="276dp"
            android:layout_height="97dp"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/password2"/>
</android.support.constraint.ConstraintLayout>