<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/text_message_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView3" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/text_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView4" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" tools:text="@tools:sample/date/mmddyy"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="200dp" tools:srcCompat="@tools:sample/avatars"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/imageView"
            android:contentDescription="@string/description_data_message"
            app:layout_constraintTop_toBottomOf="@+id/textView4"/>
    <ListView
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="64dp"/>
</android.support.constraint.ConstraintLayout>