<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/text_cot_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView11"/>
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="64dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView11">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:text="@string/text_review"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="51dp"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/textView12"/>
            <Button
                    android:text="@string/button_cot1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="79dp"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:id="@+id/button4"/>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>