<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/text_sm_header"
            android:text="@string/text_sm_header" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.76" app:layout_constraintHorizontal_bias="0.495"
            android:id="@+id/linearLayout" android:layout_marginTop="64dp" android:layout_marginBottom="64dp"
            android:layout_height="0dp">
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/text_date" android:text="@string/text_date"
                tools:text="@tools:sample/date/mmddyy"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp" tools:srcCompat="@tools:sample/avatars"
                android:id="@+id/imageView2" android:contentDescription="@string/description_data_sm"/>
        <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>